--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "framer-motion": "^12.23.24",
     "jszip": "3.10.1",
     "mammoth": "^1.11.0",
-    "next": "14.1.0",
+    "next": "^14.2.35",
     "openai": "^4.57.0",
     "pdf-parse": "^2.4.5",
     "postcss": "8.4.31",
