--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.10.0"
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@stripe/stripe-js": "^8.4.0",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
@@ -35,3 +35,4 @@
     "typescript": "5.9.3"
   }
 }
+
